Use "www-" prefix for the landing page

--- a/src/api.html
+++ b/src/api.html
@@ -14,7 +14,7 @@
   <script src="../node_modules/prismjs/prism.js"></script>
 
   <link rel="stylesheet" href="demos/demo.scss">
-  <link rel="stylesheet" href="demos/index.scss">
+  <link rel="stylesheet" href="demos/www.scss">
   <link rel="stylesheet" href="lib/bem-flex-grid.ie11.scss">
 
   <style>
@@ -24,33 +24,18 @@
 </head>
 <body class="markdown-body_DISABLED">
 
-<style>
-  .demo-header {
-    margin: -1rem -1rem 3rem -1rem;
-    padding: 6rem 0;
-    background-color: #f5f5f5;
-    border-bottom: 1px solid #e5e5e5;
-  }
-  .demo-header-title {
-    margin-right: 2rem;
-    line-height: 6rem;
-    font-size: 4rem;
-    color: #666;
-  }
-  h1 { display:none; }
-</style>
-<div class="demo-header">
+<div class="www-header">
   <div class="bfg bfg--row bfg--main-center bfg--cross-center bfg--box-overflow">
-    <div class="bfg__box bfg__box--fixed demo-header-title">
+    <div class="bfg__box bfg__box--fixed www-header-title">
       Bem Flex Grid
     </div>
 
     <div class="bfg__box bfg__box--fixed">
-      <div class="demo-logo">
-        <div class="demo-logo__square demo-logo__square--tl"></div>
-        <div class="demo-logo__square demo-logo__square--tr"></div>
-        <div class="demo-logo__square demo-logo__square--bl"></div>
-        <div class="demo-logo__square demo-logo__square--br"></div>
+      <div class="www-logo">
+        <div class="www-logo__square www-logo__square--1"></div>
+        <div class="www-logo__square www-logo__square--2"></div>
+        <div class="www-logo__square www-logo__square--3"></div>
+        <div class="www-logo__square www-logo__square--4"></div>
       </div>
     </div>
   </div>
