--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="demo-full-screen--disabled">
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,36 +9,36 @@
   <link rel="shortcut icon" href="favicon.ico">
 
   <link rel="stylesheet" href="demos/demo.scss">
-  <link rel="stylesheet" href="demos/index.scss">
+  <link rel="stylesheet" href="demos/www.scss">
 
   <link rel="stylesheet" href="lib/bem-flex-grid.ie11.scss">
 
   <script src="demos/demo.ts"></script>
 </head>
 <body>
-  <div class="demo-top demo-top--background">
-    <div class="demo-wrapper">
+  <div class="www-navbar www-navbar--back">
+    <div class="www-container">
       Bem Flex Grid
     </div>
   </div>
-  <header class="demo-top demo-top--forground">
-    <div class="demo-wrapper">
-      <a href="api.html" class="demo-top__link">API</a>
-      <a href="https://github.com/avine/bem-flex-grid/" class="demo-top__link">Github</a>
+  <header class="www-navbar www-navbar--front">
+    <div class="www-container">
+      <a href="api.html" class="www-navbar__link">API</a>
+      <a href="https://github.com/avine/bem-flex-grid/" class="www-navbar__link">Github</a>
     </div>
   </header>
 
-  <header class="demo-header">
+  <header class="www-header">
     <div class="bfg bfg--row bfg--main-center bfg--cross-center bfg--box-overflow">
-      <h1 class="bfg__box bfg__box--fixed demo-header__title">
+      <h1 class="bfg__box bfg__box--fixed www-header__title">
         Bem Flex Grid
       </h1>
 
-      <div class="bfg__box bfg__box--fixed demo-logo">
-        <div class="demo-logo__square demo-logo__square--tl"></div>
-        <div class="demo-logo__square demo-logo__square--tr"></div>
-        <div class="demo-logo__square demo-logo__square--bl"></div>
-        <div class="demo-logo__square demo-logo__square--br"></div>
+      <div class="bfg__box bfg__box--fixed www-logo">
+        <div class="www-logo__square www-logo__square--1"></div>
+        <div class="www-logo__square www-logo__square--2"></div>
+        <div class="www-logo__square www-logo__square--3"></div>
+        <div class="www-logo__square www-logo__square--4"></div>
       </div>
     </div>
   </header>
@@ -48,32 +48,32 @@
     <p>To deep dive, check out the <a href="api.html">api</a>.</p>
   </header>
 
-  <div class="demo-wrapper">
+  <div class="www-container">
 
-    <div id="demo-showcase">
-      <a href="demos/showcase/0.html"></a>
-      <a href="demos/showcase/00.html"></a>
-      <a href="demos/showcase/1.html"></a>
-      <a href="demos/showcase/2.html"></a>
-      <a href="demos/showcase/3.html"></a>
-      <a href="demos/showcase/4.html"></a>
-      <a href="demos/showcase/5.html"></a>
-      <a href="demos/showcase/6.html"></a>
-      <a href="demos/showcase/7.html"></a>
-      <a href="demos/showcase/8.html"></a>
-      <a href="demos/showcase/9.html"></a>
-      <a href="demos/showcase/10.html"></a>
-      <a href="demos/showcase/11.html"></a>
-      <a href="demos/showcase/12.html"></a>
-      <a href="demos/showcase/13.html"></a>
-      <a href="demos/showcase/14.html"></a>
-      <a href="demos/showcase/15.html"></a>
-      <a href="demos/showcase/16.html"></a>
-      <a href="demos/showcase/17.html"></a>
-      <a href="demos/showcase/18.html"></a>
-      <a href="demos/showcase/19.html"></a>
-      <a href="demos/showcase/20.html"></a>
-      <a href="demos/showcase/21.html"></a>
+    <div id="www-showcase">
+      <a href="demos/content/0.html"></a>
+      <a href="demos/content/00.html"></a>
+      <a href="demos/content/1.html"></a>
+      <a href="demos/content/2.html"></a>
+      <a href="demos/content/3.html"></a>
+      <a href="demos/content/4.html"></a>
+      <a href="demos/content/5.html"></a>
+      <a href="demos/content/6.html"></a>
+      <a href="demos/content/7.html"></a>
+      <a href="demos/content/8.html"></a>
+      <a href="demos/content/9.html"></a>
+      <a href="demos/content/10.html"></a>
+      <a href="demos/content/11.html"></a>
+      <a href="demos/content/12.html"></a>
+      <a href="demos/content/13.html"></a>
+      <a href="demos/content/14.html"></a>
+      <a href="demos/content/15.html"></a>
+      <a href="demos/content/16.html"></a>
+      <a href="demos/content/17.html"></a>
+      <a href="demos/content/18.html"></a>
+      <a href="demos/content/19.html"></a>
+      <a href="demos/content/20.html"></a>
+      <a href="demos/content/21.html"></a>
     </div>
 
     <footer>
