--- a/src/index2.html
+++ b/src/index2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="demo-full-screen--disabled">
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,39 +9,39 @@
   <link rel="shortcut icon" href="favicon.ico">
 
   <link rel="stylesheet" href="demos/demo.scss">
-  <link rel="stylesheet" href="demos/index.scss">
+  <link rel="stylesheet" href="demos/www.scss">
 
   <link rel="stylesheet" href="lib/bem-flex-grid.ie11.scss">
 </head>
 <body>
-  <div class="demo-top demo-top--background">
-    <div class="demo-wrapper">
+  <div class="www-navbar www-navbar--back">
+    <div class="www-container">
       Bem Flex Grid
     </div>
   </div>
-  <header class="demo-top demo-top--forground">
-    <div class="demo-wrapper">
-      <a href="api.html" class="demo-top__link">API</a>
-      <a href="https://github.com/avine/bem-flex-grid/" class="demo-top__link">Github</a>
+  <header class="www-navbar www-navbar--front">
+    <div class="www-container">
+      <a href="api.html" class="www-navbar__link">API</a>
+      <a href="https://github.com/avine/bem-flex-grid/" class="www-navbar__link">Github</a>
     </div>
   </header>
 
-  <header class="demo-header">
+  <header class="www-header">
     <div class="bfg bfg--row bfg--main-center bfg--cross-center bfg--box-overflow">
-      <h1 class="bfg__box bfg__box--fixed demo-header__title">
+      <h1 class="bfg__box bfg__box--fixed www-header__title">
         Bem Flex Grid
       </h1>
 
-      <div class="bfg__box bfg__box--fixed demo-logo">
-        <div class="demo-logo__square demo-logo__square--tl"></div>
-        <div class="demo-logo__square demo-logo__square--tr"></div>
-        <div class="demo-logo__square demo-logo__square--bl"></div>
-        <div class="demo-logo__square demo-logo__square--br"></div>
+      <div class="bfg__box bfg__box--fixed www-logo">
+        <div class="www-logo__square www-logo__square--1"></div>
+        <div class="www-logo__square www-logo__square--2"></div>
+        <div class="www-logo__square www-logo__square--3"></div>
+        <div class="www-logo__square www-logo__square--4"></div>
       </div>
     </div>
   </header>
 
-  <div class="demo-wrapper">
+  <div class="www-container">
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum molestie arcu ac dapibus interdum. Proin faucibus at felis eu blandit. Etiam accumsan sapien nec scelerisque sodales. Nam rhoncus dolor porttitor rhoncus ullamcorper. Maecenas odio justo, tempor eget arcu in, tincidunt tincidunt est. Vestibulum maximus elementum dui id interdum. Vestibulum pulvinar id libero id suscipit. Cras suscipit ac erat eu sodales. Mauris efficitur imperdiet metus, eget semper arcu imperdiet id. In eget elit metus. Maecenas sed ante eu massa dictum feugiat. Nulla odio felis, rhoncus sit amet tellus vel, dignissim cursus justo. Donec gravida sagittis felis id porttitor.
       <br><br>
       Etiam imperdiet elementum est. Pellentesque volutpat, orci a euismod tristique, odio ligula tristique magna, eget semper turpis turpis eget ligula. Phasellus eget congue libero. Integer suscipit mauris sed odio fringilla, et malesuada justo mattis. Fusce ac sodales est. Nulla ac arcu risus. Suspendisse urna metus, semper et ipsum quis, congue blandit risus.
