--- a/src/api.html
+++ b/src/api.html
@@ -1,45 +1,55 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Bem Flex Grid</title>
+    <title>Documentation - Bem Flex Grid</title>
 
-  <link rel="shortcut icon" href="favicon.ico">
+    <link rel="shortcut icon" href="favicon.ico">
 
-  <link rel="stylesheet" href="../node_modules/primer-markdown/build/build.css">
+    <link rel="stylesheet" href="../node_modules/primer-markdown/build/build.css">
 
-  <link rel="stylesheet" href="../node_modules/prismjs/themes/prism.css">
-  <script src="../node_modules/prismjs/prism.js"></script>
+    <link rel="stylesheet" href="../node_modules/prismjs/themes/prism.css">
+    <script src="../node_modules/prismjs/prism.js"></script>
 
-  <link rel="stylesheet" href="demos/demo.scss">
-  <link rel="stylesheet" href="demos/www.scss">
-  <link rel="stylesheet" href="lib/bem-flex-grid.ie11.scss">
+    <link rel="stylesheet" href="demos/demo.scss">
+    <link rel="stylesheet" href="demos/www.scss">
+    <link rel="stylesheet" href="lib/bem-flex-grid.ie11.scss">
 
-  <style>
-    body { max-width: 992px; margin: auto; padding: 1rem; }
-    pre[class*="language-"] { background:#f6f8fa };
-  </style>
-</head>
-<body class="markdown-body_DISABLED">
-
-<div class="www-header">
-  <div class="bfg bfg--row bfg--main-center bfg--cross-center bfg--box-overflow">
-    <div class="bfg__box bfg__box--fixed www-header-title">
-      Bem Flex Grid
-    </div>
-
-    <div class="bfg__box bfg__box--fixed">
-      <div class="www-logo">
-        <div class="www-logo__square www-logo__square--1"></div>
-        <div class="www-logo__square www-logo__square--2"></div>
-        <div class="www-logo__square www-logo__square--3"></div>
-        <div class="www-logo__square www-logo__square--4"></div>
+    <style>
+      pre[class*="language-"] { background:#f6f8fa };
+    </style>
+  </head>
+  <body class="markdown-body_DISABLED">
+    <div class="www-navbar www-navbar--back">
+      <div class="www-container">
+        Bem Flex Grid
       </div>
     </div>
-  </div>
-</div>
+    <header class="www-navbar www-navbar--front">
+      <div class="www-container">
+        <a href="api.html" class="www-navbar__link">API</a>
+        <a href="https://github.com/avine/bem-flex-grid/" class="www-navbar__link">Github</a>
+      </div>
+    </header>
+
+    <header class="www-header">
+      <div class="bfg bfg--row bfg--main-center bfg--cross-center bfg--box-overflow">
+        <h1 class="bfg__box bfg__box--fixed www-header__title">
+          Bem Flex Grid
+        </h1>
+
+        <div class="bfg__box bfg__box--fixed www-logo">
+          <div class="www-logo__square www-logo__square--1"></div>
+          <div class="www-logo__square www-logo__square--2"></div>
+          <div class="www-logo__square www-logo__square--3"></div>
+          <div class="www-logo__square www-logo__square--4"></div>
+        </div>
+      </div>
+    </header>
+
+    <main class="www-container">
 
 <h1>bem-flex-grid</h1>
 <p>CSS flex grid, <a href="http://getbem.com/">BEM</a> compliant</p>
@@ -409,7 +419,8 @@ npm run build
 npm run md-to-html
 </code></pre>
 
-<p><br>View on <a href="https://github.com/avine/bem-flex-grid">Github</a>.</p>
 
+      <p><br>View on <a href="https://github.com/avine/bem-flex-grid">Github</a>.</p>
+    </main>
 </body>
 </html>
