--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,7 @@
     <p>To deep dive, check out the <a href="api.html">api</a>.</p>
   </header>
 
-  <div class="www-container">
+  <main class="www-container">
 
     <div id="www-showcase">
       <a href="demos/content/0.html"></a>
@@ -82,7 +82,7 @@
 
     <a style="display:none" href="index2.html"></a>
 
-  </div>
+  </main>
 
   <script>Demo.showcase();</script>
 </body>
