Rename into documentation.html

--- a/src/documentation.html
+++ b/src/documentation.html
@@ -24,12 +24,12 @@
   <body class="markdown-body_DISABLED">
     <div class="www-navbar www-navbar--back">
       <div class="www-container">
-        Bem Flex Grid
+        <a href="/" class="www-navbar__link">Bem Flex Grid</a>
       </div>
     </div>
     <header class="www-navbar www-navbar--front">
       <div class="www-container">
-        <a href="api.html" class="www-navbar__link">API</a>
+        <a href="documentation.html" class="www-navbar__link">Documentation</a>
         <a href="https://github.com/avine/bem-flex-grid/" class="www-navbar__link">Github</a>
       </div>
     </header>
@@ -37,7 +37,7 @@
     <header class="www-header">
       <div class="bfg bfg--row bfg--main-center bfg--cross-center bfg--box-overflow">
         <h1 class="bfg__box bfg__box--fixed www-header__title">
-          Bem Flex Grid
+          <a href="/">Bem Flex Grid</a>
         </h1>
 
         <div class="bfg__box bfg__box--fixed www-logo">
@@ -415,7 +415,7 @@ npm start
 # Build `bem-flex-grid.ie11.css` and `bem-flex-grid.ie11.min.css` from `bem-flex-grid.ie11.scss`
 npm run build
 
-# Build `api.html` from `README.md`
+# Build `documentation.html` from `README.md`
 npm run md-to-html
 </code></pre>
 
