--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Showcase - Bem Flex Grid</title>
+  <title>Bem Flex Grid</title>
 
   <link rel="shortcut icon" href="favicon.ico">
 
@@ -18,12 +18,12 @@
 <body>
   <div class="www-navbar www-navbar--back">
     <div class="www-container">
-      Bem Flex Grid
+      <a href="/" class="www-navbar__link">Bem Flex Grid</a>
     </div>
   </div>
   <header class="www-navbar www-navbar--front">
     <div class="www-container">
-      <a href="api.html" class="www-navbar__link">API</a>
+      <a href="documentation.html" class="www-navbar__link">Documentation</a>
       <a href="https://github.com/avine/bem-flex-grid/" class="www-navbar__link">Github</a>
     </div>
   </header>
@@ -31,7 +31,7 @@
   <header class="www-header">
     <div class="bfg bfg--row bfg--main-center bfg--cross-center bfg--box-overflow">
       <h1 class="bfg__box bfg__box--fixed www-header__title">
-        Bem Flex Grid
+        <a href="/">Bem Flex Grid</a>
       </h1>
 
       <div class="bfg__box bfg__box--fixed www-logo">
@@ -43,13 +43,7 @@
     </div>
   </header>
 
-  <header style="display:none;">
-    <p>In this page, you'll find a lot of real examples of how to use the grid.</p>
-    <p>To deep dive, check out the <a href="api.html">api</a>.</p>
-  </header>
-
   <main class="www-container">
-
     <div id="www-showcase">
       <a href="demos/content/0.html"></a>
       <a href="demos/content/00.html"></a>
@@ -79,9 +73,6 @@
     <footer>
       <p>View on <a href="https://github.com/avine/bem-flex-grid/">GitHub</a>.</p>
     </footer>
-
-    <a style="display:none" href="index2.html"></a>
-
   </main>
 
   <script>Demo.showcase();</script>
