--- a/src/index.html
+++ b/src/index.html
@@ -68,11 +68,8 @@
       <a href="demos/content/19.html"></a>
       <a href="demos/content/20.html"></a>
       <a href="demos/content/21.html"></a>
+      <a href="demos/content/22.html"></a>
     </div>
-
-    <footer>
-      <p>View on <a href="https://github.com/avine/bem-flex-grid/">GitHub</a>.</p>
-    </footer>
   </main>
 
   <script>Demo.showcase();</script>
