Replace `--fixed` with `--fit`

--- a/src/demos/content/14.html
+++ b/src/demos/content/14.html
@@ -23,8 +23,8 @@
 
   <div class="bfg bfg--col bfg--main-between">
     <div class="bfg__box bfg__box--2"></div>
-    <div class="bfg__box bfg__box--fixed"><i>Fixed box</i></div>
-    <div class="bfg__box bfg__box--fixed"><i>Fixed box</i></div>
+    <div class="bfg__box bfg__box--fit"><i>Fixed box</i></div>
+    <div class="bfg__box bfg__box--fit"><i>Fixed box</i></div>
     <div class="bfg__box bfg__box--4"></div>
   </div>
 
