--- a/src/demos/content/18.html
+++ b/src/demos/content/18.html
@@ -16,12 +16,12 @@
 </head>
 <body>
   <div class="demo-source__description">
-    To fix the height of a particular box in pixels, use <code>.bfg__box--fixed</code> and give the box the expected <code>height</code>.<br>
+    To fix the height of a particular box in pixels, use <code>.bfg__box--fit</code> and give the box the expected <code>height</code>.<br>
     To see it in action, open on a separate tab and resize the window.
   </div>
 
   <div class="bfg bfg--col">
-    <div class="bfg__box bfg__box--fixed" style="height:150px"></div>
+    <div class="bfg__box bfg__box--fit" style="height:150px"></div>
     <div class="bfg__box bfg__box--4"></div>
     <div class="bfg__box bfg__box--8"></div>
   </div>
