--- a/src/index.html
+++ b/src/index.html
@@ -30,11 +30,11 @@
 
   <header class="www-header">
     <div class="bfg bfg--row bfg--main-center bfg--cross-center bfg--box-overflow">
-      <h1 class="bfg__box bfg__box--fixed www-header__title">
+      <h1 class="bfg__box bfg__box--fit www-header__title">
         <a href="/">Bem Flex Grid</a>
       </h1>
 
-      <div class="bfg__box bfg__box--fixed www-logo">
+      <div class="bfg__box bfg__box--fit www-logo">
         <div class="www-logo__square www-logo__square--1"></div>
         <div class="www-logo__square www-logo__square--2"></div>
         <div class="www-logo__square www-logo__square--3"></div>
