--- a/src/documentation.html
+++ b/src/documentation.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-  <html lang="en">
+  <html lang="en" class="markdown-body">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -8,7 +8,7 @@
 
     <link rel="shortcut icon" href="favicon.ico">
 
-    <link rel="stylesheet" href="demos/documentation.scss">
+    <link rel="stylesheet" href="../node_modules/primer-markdown/build/build.css">
 
     <link rel="stylesheet" href="../node_modules/prismjs/themes/prism.css">
     <script src="../node_modules/prismjs/prism.js"></script>
@@ -21,9 +21,10 @@
 
     <style>
       pre[class*="language-"] { background:#f6f8fa };
+      .markdown-body h3 { color: #C62828; }
     </style>
   </head>
-  <body class="markdown-body">
+  <body>
     <div class="www-navbar www-navbar--back">
       <div class="www-container">
         <a href="/" class="www-navbar__link">Bem Flex Grid</a>
@@ -442,7 +443,7 @@ npm start
 npm run build
 
 # Build `documentation.html` from `README.md`
-npm run md-to-html
+npm run doc
 </code></pre>
 
 
