Add header subtitle

--- a/src/index.html
+++ b/src/index.html
@@ -41,6 +41,7 @@
         <div class="www-logo__square www-logo__square--4"></div>
       </div>
     </div>
+    <h2 class="www-header__subtitle">CSS flex grid, BEM compliant.</h2>
   </header>
 
   <main class="www-container">
