--- a/src/documentation.html
+++ b/src/documentation.html
@@ -438,7 +438,7 @@ $bfg-gap: 2rem;
   &lt;div class=&quot;bfg__content bfg__content--info&quot;&gt;&lt;/div&gt;
 ...
 </code></pre>
-<h2>Summary</h2>
+<h2>Selectors summary</h2>
 <table>
 <thead>
 <tr>
