--- a/src/demos/content/1.html
+++ b/src/demos/content/1.html
@@ -16,11 +16,14 @@
 </head>
 <body>
   <div class="demo-source__description">
-    The minimal markup required with <code>.bfg--row</code> direction.
+    <h1>Basic grid</h1>
+    <p>The minimal markup required with <code>.bfg--row</code> direction.</p>
   </div>
 
-  <div class="bfg bfg--row">
-    <div class="bfg__box"></div>
+  <div class="area">
+    <div class="bfg bfg--row">
+      <div class="bfg__box"></div>
+    </div>
   </div>
 
   <script>Demo.viewCode(); Demo.fillGrid(); Demo.fullScreenSwitcher();</script>
