--- a/src/index.html
+++ b/src/index.html
@@ -46,8 +46,8 @@
 
   <main class="www-container">
     <div id="www-showcase">
-      <a href="demos/content/0.html"></a>
-      <a href="demos/content/00.html"></a>
+      <!--<a href="demos/content/0.html"></a>
+      <a href="demos/content/00.html"></a>-->
       <a href="demos/content/1.html"></a>
       <a href="demos/content/2.html"></a>
       <a href="demos/content/3.html"></a>
