--- a/src/demos/content/1.html
+++ b/src/demos/content/1.html
@@ -15,15 +15,20 @@
   <script src="../demo.ts"></script>
 </head>
 <body>
-  <div class="demo-source__description">
-    <h1>Basic grid</h1>
-    <p>The minimal markup required with <code>.bfg--row</code> direction.</p>
-  </div>
+  <div class="final__info">
+    <div class="final__desc">
 
-  <div class="area">
+      <h1>Basic grid</h1>
+      <p>The minimal markup required with <code>.bfg--row</code> direction.</p>
+
+    </div>
+  </div>
+  <div class="final__demo">
+
     <div class="bfg bfg--row">
       <div class="bfg__box"></div>
     </div>
+
   </div>
 
   <script>Demo.viewCode(); Demo.fillGrid(); Demo.fullScreenSwitcher();</script>
