--- a/src/demos/content/12.html
+++ b/src/demos/content/12.html
@@ -15,26 +15,33 @@
   <script src="../demo.ts"></script>
 </head>
 <body>
-  <div class="demo-source__description">
-    This demo shows real nested grid in the same row direction.
+  <div class="final__info">
+    <div class="final__desc">
+
+      <p>This demo shows real nested grid in the same row direction.</p>
+
+    </div>
   </div>
+  <div class="final__demo">
 
-  <div class="bfg bfg--row">
-    <div class="bfg__box bfg__box--3">
+    <div class="bfg bfg--row">
+      <div class="bfg__box bfg__box--3">
 
-      <div class="bfg bfg--col">
-        <div class="bfg__box bfg__box--6"></div>
-        <div class="bfg__box bfg__box--6"></div>
+        <div class="bfg bfg--col">
+          <div class="bfg__box bfg__box--6"></div>
+          <div class="bfg__box bfg__box--6"></div>
+        </div>
+
       </div>
+      <div class="bfg__box bfg__box--9">
 
-    </div>
-    <div class="bfg__box bfg__box--9">
+        <div class="bfg bfg--col">
+          <div class="bfg__box bfg__box--12"></div>
+        </div>
 
-      <div class="bfg bfg--col">
-        <div class="bfg__box bfg__box--12"></div>
       </div>
-
     </div>
+
   </div>
 
   <script>Demo.viewCode(); Demo.fillGrid(); Demo.fullScreenSwitcher();</script>
