--- a/src/demos/content/13.html
+++ b/src/demos/content/13.html
@@ -15,17 +15,24 @@
   <script src="../demo.ts"></script>
 </head>
 <body>
-  <div class="demo-source__description">
-    When the total size of the boxes is less than <code>12</code>, you can distribute the remaining space using:
-    <code>.bfg--main-center</code>, <code>.bfg--main-end</code>,
-    <code>.bfg--main-between</code> or <code>.bfg--main-around</code>.
-  </div>
+  <div class="final__info">
+    <div class="final__desc">
 
-  <div class="bfg bfg--row bfg--main-between">
-    <div class="bfg__box bfg__box--2"></div>
-    <div class="bfg__box bfg__box--fit"><i>Fixed box</i></div>
-    <div class="bfg__box bfg__box--fit"><i>Fixed box</i></div>
-    <div class="bfg__box bfg__box--4"></div>
+      <p>When the total size of the boxes is less than <code>12</code>, you can distribute the remaining space using:
+        <code>.bfg--main-center</code>, <code>.bfg--main-end</code>,
+        <code>.bfg--main-between</code> or <code>.bfg--main-around</code>.</p>
+
+    </div>
+  </div>
+  <div class="final__demo">
+
+    <div class="bfg bfg--row bfg--main-between">
+      <div class="bfg__box bfg__box--2"></div>
+      <div class="bfg__box bfg__box--fit"><i>Fixed box</i></div>
+      <div class="bfg__box bfg__box--fit"><i>Fixed box</i></div>
+      <div class="bfg__box bfg__box--4"></div>
+    </div>
+
   </div>
 
   <script>Demo.viewCode(); Demo.fillGrid(); Demo.fullScreenSwitcher();</script>
