--- a/src/demos/content/16.html
+++ b/src/demos/content/16.html
@@ -15,19 +15,26 @@
   <script src="../demo.ts"></script>
 </head>
 <body>
-  <div class="demo-source__description">
-    This demo shows nested grid in the same column direction.
-  </div>
+  <div class="final__info">
+    <div class="final__desc">
 
-  <div class="bfg bfg--col">
-    <div class="bfg__box bfg__box--4"></div>
-    <div class="bfg__box bfg__box--4 bfg bfg--col">
-
-      <div class="bfg__box bfg__box--6"></div>
-      <div class="bfg__box bfg__box--6"></div>
+      <p>This demo shows nested grid in the same column direction.</p>
 
     </div>
-    <div class="bfg__box bfg__box--4"></div>
+  </div>
+  <div class="final__demo">
+
+    <div class="bfg bfg--col">
+      <div class="bfg__box bfg__box--4"></div>
+      <div class="bfg__box bfg__box--4 bfg bfg--col">
+
+        <div class="bfg__box bfg__box--6"></div>
+        <div class="bfg__box bfg__box--6"></div>
+
+      </div>
+      <div class="bfg__box bfg__box--4"></div>
+    </div>
+
   </div>
 
   <script>Demo.viewCode(); Demo.fillGrid(); Demo.fullScreenSwitcher();</script>
