--- a/src/demos/content/17.html
+++ b/src/demos/content/17.html
@@ -15,15 +15,22 @@
   <script src="../demo.ts"></script>
 </head>
 <body>
-  <div class="demo-source__description">
-    To fix the width of a particular box in pixels, use <code>.bfg__box--fit</code> and give the box the expected <code>width</code>.<br>
-    To see it in action, open on a separate tab and resize the window.
-  </div>
+  <div class="final__info">
+    <div class="final__desc">
 
-  <div class="bfg bfg--row">
-    <div class="bfg__box bfg__box--fit" style="width:150px"></div>
-    <div class="bfg__box bfg__box--4"></div>
-    <div class="bfg__box bfg__box--8"></div>
+      <p>To fix the width of a particular box in pixels, use <code>.bfg__box--fit</code> and give the box the expected <code>width</code>.<br>
+        To see it in action, open on a separate tab and resize the window.</p>
+
+    </div>
+  </div>
+  <div class="final__demo">
+
+    <div class="bfg bfg--row">
+      <div class="bfg__box bfg__box--fit" style="width:150px"></div>
+      <div class="bfg__box bfg__box--4"></div>
+      <div class="bfg__box bfg__box--8"></div>
+    </div>
+
   </div>
 
   <script>Demo.viewCode(); Demo.fillGrid(); Demo.fullScreenSwitcher();</script>
