--- a/src/demos/content/2.html
+++ b/src/demos/content/2.html
@@ -15,12 +15,19 @@
   <script src="../demo.ts"></script>
 </head>
 <body>
-  <div class="demo-source__description">
-    The minimal markup required with <code>.bfg--col</code> direction.
-  </div>
+  <div class="final__info">
+    <div class="final__desc">
 
-  <div class="bfg bfg--col">
-    <div class="bfg__box"></div>
+      <p>The minimal markup required with <code>.bfg--col</code> direction.</p>
+
+    </div>
+  </div>
+  <div class="final__demo">
+
+    <div class="bfg bfg--col">
+      <div class="bfg__box"></div>
+    </div>
+
   </div>
 
   <script>Demo.viewCode(); Demo.fillGrid(); Demo.fullScreenSwitcher();</script>
