--- a/src/demos/content/20.html
+++ b/src/demos/content/20.html
@@ -15,32 +15,39 @@
   <script src="../demo.ts"></script>
 </head>
 <body>
-  <div class="demo-source__description">
-    There are 12 sizes available to make the grid layout, from <code>.bfg__box--1</code> to <code>.bfg__box--12</code>.<br>
-    <br>
-    In this demo we also add a new <code>div</code> with <code>.bfg__content.bfg__content--light</code> to fill the boxes content.
+  <div class="final__info">
+    <div class="final__desc">
+
+      <p>There are 12 sizes available to make the grid layout, from <code>.bfg__box--1</code> to <code>.bfg__box--12</code>.<br>
+        <br>
+        In this demo we also add a new <code>div</code> with <code>.bfg__content.bfg__content--light</code> to fill the boxes content.</p>
+
+    </div>
   </div>
+  <div class="final__demo">
 
-  <div class="bfg bfg--col bfg--gap bfg--wrap">
-    <div class="bfg__box bfg__box--12"><div class="bfg__content bfg__content--light"></div></div>
+    <div class="bfg bfg--col bfg--gap bfg--wrap">
+      <div class="bfg__box bfg__box--12"><div class="bfg__content bfg__content--light"></div></div>
 
-    <div class="bfg__box bfg__box--11"><div class="bfg__content bfg__content--light"></div></div>
-    <div class="bfg__box bfg__box--1"><div class="bfg__content bfg__content--light"></div></div>
+      <div class="bfg__box bfg__box--11"><div class="bfg__content bfg__content--light"></div></div>
+      <div class="bfg__box bfg__box--1"><div class="bfg__content bfg__content--light"></div></div>
 
-    <div class="bfg__box bfg__box--10"><div class="bfg__content bfg__content--light"></div></div>
-    <div class="bfg__box bfg__box--2"><div class="bfg__content bfg__content--light"></div></div>
+      <div class="bfg__box bfg__box--10"><div class="bfg__content bfg__content--light"></div></div>
+      <div class="bfg__box bfg__box--2"><div class="bfg__content bfg__content--light"></div></div>
 
-    <div class="bfg__box bfg__box--9"><div class="bfg__content bfg__content--light"></div></div>
-    <div class="bfg__box bfg__box--3"><div class="bfg__content bfg__content--light"></div></div>
+      <div class="bfg__box bfg__box--9"><div class="bfg__content bfg__content--light"></div></div>
+      <div class="bfg__box bfg__box--3"><div class="bfg__content bfg__content--light"></div></div>
 
-    <div class="bfg__box bfg__box--8"><div class="bfg__content bfg__content--light"></div></div>
-    <div class="bfg__box bfg__box--4"><div class="bfg__content bfg__content--light"></div></div>
+      <div class="bfg__box bfg__box--8"><div class="bfg__content bfg__content--light"></div></div>
+      <div class="bfg__box bfg__box--4"><div class="bfg__content bfg__content--light"></div></div>
 
-    <div class="bfg__box bfg__box--7"><div class="bfg__content bfg__content--light"></div></div>
-    <div class="bfg__box bfg__box--5"><div class="bfg__content bfg__content--light"></div></div>
+      <div class="bfg__box bfg__box--7"><div class="bfg__content bfg__content--light"></div></div>
+      <div class="bfg__box bfg__box--5"><div class="bfg__content bfg__content--light"></div></div>
 
-    <div class="bfg__box bfg__box--6"><div class="bfg__content bfg__content--light"></div></div>
-    <div class="bfg__box bfg__box--6"><div class="bfg__content bfg__content--light"></div></div>
+      <div class="bfg__box bfg__box--6"><div class="bfg__content bfg__content--light"></div></div>
+      <div class="bfg__box bfg__box--6"><div class="bfg__content bfg__content--light"></div></div>
+    </div>
+
   </div>
 
   <script>Demo.viewCode(); Demo.fullScreenSwitcher();</script>
