--- a/src/demos/content/21.html
+++ b/src/demos/content/21.html
@@ -15,32 +15,18 @@
   <script src="../demo.ts"></script>
 </head>
 <body>
-  <div class="demo-source__description">
-    This demo shows mixing of nested and interlaced grids when using <code>.bfg--gap</code>.
-  </div>
+  <div class="final__info">
+    <div class="final__desc">
 
-  <div class="bfg bfg--col bfg--gap">
-    <div class="bfg__box bfg__box--6 bfg bfg--row"><!-- interlaced -->
-
-      <div class="bfg__box bfg__box--6 bfg bfg--col"><!-- interlaced -->
-
-        <div class="bfg__box bfg__box--6"></div>
-        <div class="bfg__box bfg__box--6"></div>
-
-      </div>
-      <div class="bfg__box bfg__box--6 bfg__box--nopad"><!-- nopad -->
-        <div class="bfg bfg--col"><!-- nested -->
-
-          <div class="bfg__box bfg__box--6"></div>
-          <div class="bfg__box bfg__box--6"></div>
-
-        </div>
-      </div>
+      <p>This demo shows mixing of nested and interlaced grids when using <code>.bfg--gap</code>.</p>
 
     </div>
-    <div class="bfg__box bfg__box--6 bfg__box--nopad"><!-- nopad -->
+  </div>
+  <div class="final__demo">
 
-      <div class="bfg bfg--row"><!-- nested -->
+    <div class="bfg bfg--col bfg--gap">
+      <div class="bfg__box bfg__box--6 bfg bfg--row"><!-- interlaced -->
+
         <div class="bfg__box bfg__box--6 bfg bfg--col"><!-- interlaced -->
 
           <div class="bfg__box bfg__box--6"></div>
@@ -55,9 +41,30 @@
 
           </div>
         </div>
-      </div>
 
+      </div>
+      <div class="bfg__box bfg__box--6 bfg__box--nopad"><!-- nopad -->
+
+        <div class="bfg bfg--row"><!-- nested -->
+          <div class="bfg__box bfg__box--6 bfg bfg--col"><!-- interlaced -->
+
+            <div class="bfg__box bfg__box--6"></div>
+            <div class="bfg__box bfg__box--6"></div>
+
+          </div>
+          <div class="bfg__box bfg__box--6 bfg__box--nopad"><!-- nopad -->
+            <div class="bfg bfg--col"><!-- nested -->
+
+              <div class="bfg__box bfg__box--6"></div>
+              <div class="bfg__box bfg__box--6"></div>
+
+            </div>
+          </div>
+        </div>
+
+      </div>
     </div>
+
   </div>
 
   <script>Demo.viewCode(); Demo.fillGrid(); Demo.fullScreenSwitcher();</script>
