--- a/src/demos/content/22.html
+++ b/src/demos/content/22.html
@@ -15,42 +15,49 @@
   <script src="../demo.ts"></script>
 </head>
 <body>
-  <div class="demo-source__description">
-    Use <code>.bfg__header</code> with <code>.bfg__content</code> to add an header.<br>
-    Use <code>.bfg__action</code> with <code>.bfg__header</code> to add one or more actions.
+  <div class="final__info">
+    <div class="final__desc">
+
+      <p>Use <code>.bfg__header</code> with <code>.bfg__content</code> to add an header.<br>
+        Use <code>.bfg__action</code> with <code>.bfg__header</code> to add one or more actions.</p>
+
+    </div>
   </div>
+  <div class="final__demo">
 
-  <div class="bfg bfg--col bfg--gap">
-    <div class="bfg__box bfg__box--3">
-      <!-- content with header -->
-      <header class="bfg__header bfg__header--error">Header</header>
-      <div class="bfg__content bfg__content--error"></div>
-    </div>
-
-    <div class="bfg__box bfg__box--6 bfg bfg--row">
+    <div class="bfg bfg--col bfg--gap">
       <div class="bfg__box bfg__box--3">
-        <!-- content with header and actions -->
-        <div class="bfg__action bfg__action--light"><a href="#action-2">Action 2</a></div>
-        <div class="bfg__action bfg__action--light"><a href="#action-1">Action 1</a></div>
-        <header class="bfg__header bfg__header--light">Very very very long Header</header>
-        <div class="bfg__content bfg__content--light"></div>
+        <!-- content with header -->
+        <header class="bfg__header bfg__header--error">Header</header>
+        <div class="bfg__content bfg__content--error"></div>
       </div>
 
-      <div class="bfg__box bfg__box--6">
-        <!-- content without header -->
-        <div class="bfg__content bfg__content--light"></div>
+      <div class="bfg__box bfg__box--6 bfg bfg--row">
+        <div class="bfg__box bfg__box--3">
+          <!-- content with header and actions -->
+          <div class="bfg__action bfg__action--light"><a href="#action-2">Action 2</a></div>
+          <div class="bfg__action bfg__action--light"><a href="#action-1">Action 1</a></div>
+          <header class="bfg__header bfg__header--light">Very very very long Header</header>
+          <div class="bfg__content bfg__content--light"></div>
+        </div>
+
+        <div class="bfg__box bfg__box--6">
+          <!-- content without header -->
+          <div class="bfg__content bfg__content--light"></div>
+        </div>
+
+        <div class="bfg__box bfg__box--3">
+          <header class="bfg__header bfg__header--info">Header</header>
+          <div class="bfg__content bfg__content--info"></div>
+        </div>
       </div>
 
       <div class="bfg__box bfg__box--3">
-        <header class="bfg__header bfg__header--info">Header</header>
-        <div class="bfg__content bfg__content--info"></div>
+        <header class="bfg__header bfg__header--warning">Header</header>
+        <div class="bfg__content bfg__content--warning"></div>
       </div>
     </div>
 
-    <div class="bfg__box bfg__box--3">
-      <header class="bfg__header bfg__header--warning">Header</header>
-      <div class="bfg__content bfg__content--warning"></div>
-    </div>
   </div>
 
   <script>Demo.viewCode(); Demo.fillGrid({ textColor: false }); Demo.fullScreenSwitcher();</script>
