--- a/src/demos/content/3.html
+++ b/src/demos/content/3.html
@@ -15,14 +15,21 @@
   <script src="../demo.ts"></script>
 </head>
 <body>
-  <div class="demo-source__description">
-    By default, <code>.bfg__box</code> are displayed on one line and can NOT leave outside the <code>.bfg--row</code> container.
-  </div>
+  <div class="final__info">
+    <div class="final__desc">
 
-  <div class="bfg bfg--row">
-    <div class="bfg__box bfg__box--2"></div>
-    <div class="bfg__box bfg__box--4"></div>
-    <div class="bfg__box bfg__box--6"></div>
+      <p>By default, <code>.bfg__box</code> are displayed on one line and can NOT leave outside the <code>.bfg--row</code> container.</p>
+
+    </div>
+  </div>
+  <div class="final__demo">
+
+    <div class="bfg bfg--row">
+      <div class="bfg__box bfg__box--2"></div>
+      <div class="bfg__box bfg__box--4"></div>
+      <div class="bfg__box bfg__box--6"></div>
+    </div>
+
   </div>
 
   <script>Demo.viewCode(); Demo.fillGrid(); Demo.fullScreenSwitcher();</script>
