--- a/src/demos/content/5.html
+++ b/src/demos/content/5.html
@@ -15,15 +15,22 @@
   <script src="../demo.ts"></script>
 </head>
 <body>
-  <div class="demo-source__description">
-    When using <code>.bfg--wrap</code>, <code>.bfg__box</code> can be displayed on multiple lines.<br>
-    In this case, the boxes may extend beyond the <code>.bfg--row</code> container, causing a global vertical scrollbar to appear.
-  </div>
+  <div class="final__info">
+    <div class="final__desc">
 
-  <div class="bfg bfg--row bfg--wrap">
-    <div class="bfg__box bfg__box--6"></div>
-    <div class="bfg__box bfg__box--6"></div>
-    <div class="bfg__box bfg__box--12"></div>
+      <p>When using <code>.bfg--wrap</code>, <code>.bfg__box</code> can be displayed on multiple lines.<br>
+        In this case, the boxes may extend beyond the <code>.bfg--row</code> container, causing a global vertical scrollbar to appear.</p>
+
+    </div>
+  </div>
+  <div class="final__demo">
+
+    <div class="bfg bfg--row bfg--wrap">
+      <div class="bfg__box bfg__box--6"></div>
+      <div class="bfg__box bfg__box--6"></div>
+      <div class="bfg__box bfg__box--12"></div>
+    </div>
+
   </div>
 
   <script>Demo.viewCode(); Demo.fillGrid(); Demo.fullScreenSwitcher();</script>
