--- a/src/demos/content/6.html
+++ b/src/demos/content/6.html
@@ -15,20 +15,27 @@
   <script src="../demo.ts"></script>
 </head>
 <body>
-  <div class="demo-source__description">
-    When using <code>.bfg--wrap</code>, <code>.bfg__box</code> can be displayed on multiple lines.<br>
-    In this case, the boxes may extend beyond the <code>.bfg--col</code> container, causing a global horizontal scrollbar to appear.
+  <div class="final__info">
+    <div class="final__desc">
 
-    <span class="demo-source__warning">
-      <strong>Note for Chrome:</strong><br>
-      You have to explicitly set the <code>width</code> of the <code>.bfg__box</code>, otherwise content like text will increase indefinitely in width.
-    </span>
+      <p>When using <code>.bfg--wrap</code>, <code>.bfg__box</code> can be displayed on multiple lines.<br>
+        In this case, the boxes may extend beyond the <code>.bfg--col</code> container, causing a global horizontal scrollbar to appear.</p>
+
+      <span class="demo-source__warning">
+        <strong>Note for Chrome:</strong><br>
+        You have to explicitly set the <code>width</code> of the <code>.bfg__box</code>, otherwise content like text will increase indefinitely in width.
+      </span>
+
+    </div>
   </div>
+  <div class="final__demo">
 
-  <div class="bfg bfg--col bfg--wrap">
-    <div class="bfg__box bfg__box--6"></div>
-    <div class="bfg__box bfg__box--6"></div>
-    <div class="bfg__box bfg__box--12"></div>
+    <div class="bfg bfg--col bfg--wrap">
+      <div class="bfg__box bfg__box--6"></div>
+      <div class="bfg__box bfg__box--6"></div>
+      <div class="bfg__box bfg__box--12"></div>
+    </div>
+
   </div>
 
   <script>Demo.viewCode(); Demo.fillGrid(); Demo.fullScreenSwitcher();</script>
