Clean code (in progress...)

--- a/src/demos/content/6.html
+++ b/src/demos/content/6.html
@@ -21,10 +21,10 @@
       <p>When using <code>.bfg--wrap</code>, <code>.bfg__box</code> can be displayed on multiple lines.<br>
         In this case, the boxes may extend beyond the <code>.bfg--col</code> container, causing a global horizontal scrollbar to appear.</p>
 
-      <span class="demo-source__warning">
+      <p class="final__warning">
         <strong>Note for Chrome:</strong><br>
         You have to explicitly set the <code>width</code> of the <code>.bfg__box</code>, otherwise content like text will increase indefinitely in width.
-      </span>
+      </p>
 
     </div>
   </div>
